rpi5/shiori/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: shiori
  labels:
    app: shiori
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shiori
  serviceName: shiori
  template:
    metadata:
      name: shiori
      labels:
        app: shiori
    spec:
      containers:
        - name: shiori
          image: ghcr.io/go-shiori/shiori:latest
          imagePullPolicy: Always
          command: [ "/usr/bin/shiori", "serve" ]
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /src/shiori
              name: data
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            allowPrivilegeEscalation: false
            privileged: false
          # resources:
          #   requests:
          #     cpu: 250m
          #     memory: 500Mi
          #   limits:
          #     memory: 1Gi
          # livenessProbe:
          #   httpGet:
          #     port: 7878
          #     path: /ping
          #   initialDelaySeconds: 30
          #   periodSeconds: 30
          #   timeoutSeconds: 5
          #   failureThreshold: 3
          # readinessProbe:
          #   httpGet:
          #     port: 7878
          #     path: /ping
          #   periodSeconds: 10
          #   timeoutSeconds: 5
          #   failureThreshold: 3
      restartPolicy: Always
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
