rpi5/shiori/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shiori
spec:
  selector:
    app: shiori
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
