rpi5/shiori/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: shiori
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`shiori.local`)
      middlewares:
        - name: security-headers
          namespace: kube-system
      services:
        - name: shiori
          port: 80
  tls:
    secretName: shiori-cert-tls
    domains:
      - main: shiori.local
